--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@
 *.exe
 *.out
 *.app
+
+# Vscode settings
+.vscode/
+
+# Extensionless files
+*
+!/**/
+!*.*
+
+# json files (settings and tasks)
+*.json
